(feature) Add language select and headlines as variants.

--- a/starter-kits/tailwind/apps/storybook/preview-body.html
+++ b/starter-kits/tailwind/apps/storybook/preview-body.html
@@ -1,4 +1,4 @@
 <!--  .storybook/preview-body.html -->
-<body class="wingsuit-body font-sans" x-data="{ isScrollDown: false, menuIsOpen: false }" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; ">
+<body class="wingsuit-body font-sans" x-data="{ isScrollDown: false, menuIsOpen: false, languageSwitcherOpen: false }" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; ">
 <div id="root" class="wingsuit-root"></div>
 </body>
