--- a/starter-kits/tailwind/apps/storybook/preview-body.html
+++ b/starter-kits/tailwind/apps/storybook/preview-body.html
@@ -1,3 +1,3 @@
 <!--  .storybook/preview-body.html -->
-<body class="wingsuit-body font-sans overflow-x-hidden bg-gray-50" x-data="{ isScrollDown: false, menuIsOpen: false, languageSwitcherOpen: false }" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; ">
+<body class="wingsuit-body font-sans overflow-x-hidden bg-gray-50" x-data="{ menuIsOpen: false, languageSwitcherOpen: false }">
 </body>
